--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify/react": "^6.0.1",
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/vite": "^4.1.13",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
