--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.9.1",
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.31.0",
