--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@iconify/react": "^6.0.1",
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/vite": "^4.1.13",
+    "i18next": "^23.11.5",
+    "install": "^0.13.0",
     "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^14.1.2",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.9.1",
     "react-router-hash-link": "^2.4.3",
@@ -36,6 +39,6 @@
     "globals": "^16.3.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "terser": "^5.44.0",
-    "vite": "^7.1.2"
+    "vite": "^7.3.1"
   }
 }
